# gcp-genai-dataset-versioning

./: gcp-genai-dataset-versioning.code-workspace
assets/configs/: dev.yaml
assets/data/: question_answering.csv  question_answering.jsonl  questions_only.jsonl
assets/schemas/: text_1.0.0.yaml
assets/schemas/ioformat/: image_bounding_box_io_format_1.0.0.yaml  image_classification_multi_label_io_format_1.0.0.yaml  image_segmentation_io_format_1.0.0.yaml  text_classification_multi_label_io_format_1.0.0.yaml  text_classification_single_label_io_format_1.0.0.yaml  text_sentiment_io_format_1.0.0.yaml  video_action_recognition_io_format_1.0.0.yaml  video_classification_io_format_1.0.0.yaml  video_object_tracking_io_format_1.0.0.yaml
assets/schemas/ioformat/custom/: question_answering.yaml  question_only.yaml
assets/schemas/metadata/: image_1.0.0.yaml  tables_1.0.0.yaml  tabular_1.0.0.yaml  time_series_1.0.0.yaml  video_1.0.0.yaml
datacentric/: pyproject.toml
datacentric/datacentric/: config.py
datacentric/datacentric/datasets/: create.py
datacentric/datacentric/evals/: types.py
datacentric/tests/datasets/: test_create.py
docs/: interactive.ipynb
